--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,23 @@ canvas {
     width: 100%;
     height: 100%;
 }
+#options{
+    position: absolute; 
+    z-index: 1; 
+    padding-top: 10px;
+    padding-right: 10px;
+    right: 0;
+    top: 0;
+}
+#options button{
+    all: unset;
+    font-family: 'Fira Mono', monospace;
+    font-size: 12px;
+    border:1px solid #888;
+    border-radius: 20px;
+    padding: 10px;
+    cursor: pointer;
+}
 .unlockMessage{
     display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
